--- a/ArchiquestBackend/ArchiquestBackend/pom.xml
+++ b/ArchiquestBackend/ArchiquestBackend/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.ArchiquestBackend</groupId>
-	<artifactId>Archiquest</artifactId>
+	<groupId>com.Capstone</groupId>
+	<artifactId>ArchiquestBackend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Archiquest</name>
-	<description>Backend for Archiquest</description>
+	<name>ArchiquestBackend</name>
+	<description>Capstone Project</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -36,14 +36,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
@@ -53,6 +50,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
