--- a/Archiquest Backend/src/main/resources/application.properties
+++ b/Archiquest Backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Archiquest
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dbarchiquest
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.username=root
+spring.datasource.password=Kylenick123
+
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#onebuild.api.key= 1build_ext.aBcDeFgHi.AbCdEfGhIjKlMnOpQrStUvWxYz123456
+
+
