--- a/ArchiquestFrontend/package.json
+++ b/ArchiquestFrontend/package.json
@@ -18,9 +18,12 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.2.10",
+    "@viro-community/react-viro": "^2.41.1",
     "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
+    "expo-camera": "~14.0.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
